--- a/assets/scss/utilities/u-ioniconf.scss
+++ b/assets/scss/utilities/u-ioniconf.scss
@@ -59,7 +59,7 @@
 @mixin box($element:'&', $pY:null, $pX:null, $back:null, $color:null, $fB: null, $mTop:null, $mBot:null, $mLeft:null,
            $mRight:null, $fG: null, $w: null, $h: null, $mxW: null, $mnW: null, $mxH:null, $mnH:null, $br: null, $pos: null,
            $t:null, $r:null, $b:null, $l:null, $z:null, $bord:null, $bTop:null, $bRight:null, $bBot:null, $bLeft:null,
-           $pTop:null, $pBot:null, $pLeft:null, $pRight:null, $d:null, $gtc:null, $gg:null, $jc:null, $ai:null, $p: null,
+           $pTop:null, $pBot:null, $pLeft:null, $pRight:null, $d:null, $gtc:null, $gg:null, $jc:null, $js:null, $ai:null, $as:null, $p: null,
            $order:null) {
   #{$element}.u-box {
     display:#{$d};
@@ -97,7 +97,9 @@
     grid-template-columns: #{$gtc};
     grid-gap: #{$gg};
     justify-content:#{$jc};
+    justify-self:#{$js};
     align-items:#{$ai};
+    align-self:#{$as};
     order: #{$order};
   }
 }
